Switch to my fork of vimerl

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = git://git.wincent.com/command-t.git
 [submodule ".vim/bundle/vimerl"]
 	path = .vim/bundle/vimerl
-	url = git://github.com/oscarh/vimerl.git
+	url = git://github.com/kocolosk/vimerl.git
 [submodule ".vim/bundle/ack"]
 	path = .vim/bundle/ack
 	url = git://github.com/mileszs/ack.vim.git
