--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule ".vim/bundle/ack"]
 	path = .vim/bundle/ack
 	url = git://github.com/mileszs/ack.vim.git
+[submodule ".vim/bundle/ColorSamplerPack"]
+	path = .vim/bundle/ColorSamplerPack
+	url = git://github.com/vim-scripts/Color-Sampler-Pack.git
