--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/bundle/vim-mac-classic-theme"]
 	path = .vim/bundle/vim-mac-classic-theme
 	url = git://github.com/kocolosk/vim-mac-classic-theme.git
+[submodule ".vim/bundle/vim-colors-solarized"]
+	path = .vim/bundle/vim-colors-solarized
+	url = https://github.com/altercation/vim-colors-solarized.git
